:sparkles: Introduce achievements system
